# my-pre-commit-hooks

./: .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
pre_commit_hooks/: jhu_check_closing_block_comments.py
tests/: jhu_check_closing_block_comments_test.py
