[tool.poetry]
name = "my-pre-commit-hooks"
version = "v0.2.0"
description = "Pre-commit hooks by Paul Logston"
authors = ["Paul Logston <paul.logston@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "pre_commit_hooks"}
]

[tool.poetry.scripts]
jhu-check-closing-block-comments = 'pre_commit_hooks.jhu_check_closing_block_comments:main'

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
